--- a/css/style.css
+++ b/css/style.css
@@ -351,7 +351,6 @@ h5{
 	width: 100%;
 }
 .left{
-	background: #008571;
     width: 50%;
     float: left;
 }
@@ -555,8 +554,14 @@ h5{
 .back1 {
 	position: relative;
 }
-.back-text1 p{
+.back-text1{
 	position: absolute;
+    left: 25%;
+    bottom: 40%;
+    color: #fff;
+    font-size: 16px;
+   font-family: Noto Sans;
+    font-weight: bold;
 
 }
 .back2{
@@ -580,14 +585,50 @@ h5{
     align-items: flex-end;
     justify-content: space-between;
     width: 166px;
+    margin-right: 50px;
+}
+.back-icon{
+	position: absolute;
+	right: 30%;
+	top: 43%;
+	color: #fff;
 }
 .back-icon{
 	position: absolute;
 }
-.back-icon2{
-	position: absolute;
+
+
+.bus-icon{
+	display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    color: #EDAF52;
+}
+.bus-line{
+	display: flex;
+    align-items: flex-start;
+    width: 109px;
+    height: 30px;
+    background: #fff;
+    border: 1px solid  #EDAF52;
+}
+.bus-line p{
+	    color: #2D2C2B;
+    font-size: 13px;
+    left: 50px;
+    top: 50px;
+    transform: translate(50%, 50%);
+}
+.back4{
+	display: flex;
+    flex-direction: column;
 }
 
+.back-box{
+	display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
 /**/
 .arrow-left{
 	display: flex;
@@ -653,22 +694,14 @@ h5{
     font-weight: bold;
     cursor: pointer;
 }
+
 /*right part*/
 .right{
-	/* background: darkcyan;*/
     width: 50%;
     float: right;
     height: 500px;
 }
-/*.right-Books{
-	width: 623px;
-	height: 50px;
-	margin-bottom: 64.5px;
-	margin-top: 40px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-}*/
+
 .rightbook_call1{
 	width: 286px;
 	height: 50px;
@@ -703,7 +736,7 @@ h5{
 	width: 623px;
 	height: 50px;
 	margin-bottom: 64.5px;
-	margin-top: 40px;
+	margin-top: 65px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
@@ -714,7 +747,6 @@ h5{
 	height: 50px;
 	background-color:#2D2C2B;
 	border:1px solid #EDAF52;
-	/*opacity: 30%;*/
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
@@ -743,10 +775,129 @@ h5{
 .direction-icon{
 	color: #EDAF52;
 }
+/*subscribe and others*/
+.subscribe{
+	display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    background: #fff;
+    width: 80%;
+}
+.subs1{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 90%;
+	height: 50px;
+	margin-top: 20px;
+	margin-bottom: 10px;
+	border:1px solid #EDAF52;
+}
+.subs2{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 90%;
+	height: 50px;
+	margin-bottom: 10px;
+	border:1px solid #EDAF52;
+}
+.subs4{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 90%;
+	height: 50px;
+	margin-bottom: 20px;
+	border:1px solid #EDAF52;
+}
 
+.sub-text{
+	font-weight: bold;
+	font-size: 13px;
+	color: #2D2C2B;
+	font-family: Noto Sans;
+	padding-left: 20px;
+	text-transform: lowercase;
+}
+.check-email{
+	color: #EDAF52;
+	font-weight: bold;
+	font-size: 13px;
+	font-family: Noto Sans;
+	padding-left: 20px;
+}
+.click_SUBSCRIBE{
+	color: #EDAF52;
+	font-size: 13px;
+	font-weight: bold;
+	font-family: Noto Sans;
+	padding-right: 20px;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+.click{
+	color: #2D2C2B;
+	font-size: 13px;
+	font-weight: bold;
+	font-family: Noto Sans;
+	padding-right: 20px;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+/*
+*/
 
+.Loan-Percents{
+    height: 90px;
+    width: 90%;
+    margin-top: 93px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+}
 
+.first-loan{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	width: 45%;
 
+}
+.loan-rectangle{
+	width: 100%;
+	height: 50px;
+	background: #fff;
+	border: 1px solid #A5978E;
+}
+.loan-text{   
+   display: flex;
+    align-items: flex-start;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+}
+.second-loan{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	width: 45%;
+
+}
+.loan-text2{   
+   display: flex;
+    align-items: flex-start;
+    color: #EDAF52;
+    font-size: 16px;
+    font-weight: bold;
+}
+.loan-rectangle2{
+	width: 100%;
+	height: 50px;
+	background: #fff;
+	border: 1px solid #EDAF52;
+}
 
 
 /*background images*/
