--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ h5{
 	font-size: 16px;
 	font-family: Noto Sans;
 	font-weight: bold;
-	color: black;
+	color:#2D2C2B;
 	margin-bottom: 19px;
 }
 .numbers {
@@ -221,7 +221,7 @@ h5{
 	font-size: 21px;
 	font-family: Noto Sans;
 	font-weight: bold;
-	clear: #2D2C2B;
+	color: #2D2C2B;
 	margin-bottom: 51px
 }
 .Mobile{
@@ -865,6 +865,31 @@ h5{
 	width: 45%;
 
 }
+.first-filter{
+	display: flex;
+	flex-direction: column;
+	background-color:yellow; 
+	width: 47.5%;
+	height: 300px;
+
+}
+.choose-adress{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding-top: 30px;
+	padding-bottom: 22px
+}
+.choose-adress p{
+	font-size:16px; 
+	font-family: Noto Sans;
+	font-weight: bold;
+}
+.Mukhiani{
+	border: none;
+    width: 50%;
+    height: 30px;
+}
 .loan-rectangle{
 	width: 100%;
 	height: 50px;
@@ -898,6 +923,266 @@ h5{
 	background: #fff;
 	border: 1px solid #EDAF52;
 }
+
+/*ranges*/
+
+.range-sections{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: row;
+	width: 100%;
+	height: 600px;
+	padding-top: 110px;
+}
+.dual-sections{
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	width:55%;
+	height: 400px;
+}
+.row{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%
+}
+.choose-first{
+	width: 45%;
+    height: 400px;
+}
+.choose-2nd{
+	width: 45%;
+    height: 400px;
+}
+.filter-title{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	/*width: 100%;*/
+}
+.filter-title p{
+	font-size: 21px;
+	font-weight: bold;
+	color: #EDAF52;
+	font-family: Noto Sans;
+}
+
+.location-title{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+.location-title2{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-top: 30px;
+	margin-bottom: 20px;
+	width: 45%;
+}
+.location-title2 p{
+	font-size: 16px;
+	font-family: Noto Sans;
+	color: #000;
+}
+.location-title p{
+	font-size: 16px;
+	font-weight: bold;
+	font-family: Noto Sans;
+	color: #000;
+}
+.location-forms{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+}
+.location2{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+	margin-top: 
+}
+#forms{
+	border: none;
+
+}
+.location-c{
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 45%;
+    border-bottom: 1px solid #A5978E;
+}
+.location-x{
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #A5978E;
+    padding-bottom: 10px;
+}
+
+.location-v{
+	display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #A5978E;
+    padding-bottom: 10px;
+    margin-top: 40px;
+}
+.location-c p{
+	font-size: 14px;
+	font-family: Noto Sans;
+	color: #000;
+}
+.icon-c {
+	color: #EDAF52;
+}
+.Rooms-Checkboxes{
+	display: flex;
+	width: 50%;
+	height: 200px;
+	flex-direction: column;
+	margin-top: 30px;
+	background-color: #fff;
+}
+.checkboxes{
+	    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.cm{
+	font-size: 16px;
+	font-weight: bold;
+	font-family: Noto Sans;
+}
+
+.location-r{
+	display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    justify-content: space-between;
+}
+
+
+
+
+.dual3{
+	display: flex;
+	align-items: flex-start;
+	justify-content: space-between;
+	flex-direction: column;
+	width: 40%;
+	height: 400px;
+}
+
+.calculator{
+	display: flex;
+	background-color: #84756D;
+	width: 100%;
+	height: 89px;
+	margin-bottom: 23px;
+}
+
+.calculator-texts{
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-direction: column;
+	background-color: #F9F8F7;
+	width: 80%;
+	padding-left: 30px;
+}
+.calculator-texts2{
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	flex-direction: column;
+	background-color: #EDAF52;
+	width: 80%;
+	padding-left: 30px;
+}
+
+.main-name{
+	color: #EDAF52;
+    font-size: 21px;
+    font-weight: bold;
+}
+.main-name2{
+	color: #fff;
+    font-size: 21px;
+    font-weight: bold;
+}
+.dicription{
+	font-size: 16px;
+    color: #84756D;
+    padding-top: 10px;
+}
+.dicription2{
+	font-size: 16px;
+    color: #2D2C2B;
+    padding-top: 10px;
+}
+.cancel-icons{
+	width: 20%;
+	margin-top: 30px;
+    display: flex;
+    justify-content: space-around;
+    cursor: pointer;
+}
+.calc-img{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #cccccc;
+	width: 20%;
+}
+.cancel-buttons{
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row;
+	margin-top: 40px;
+}
+.cancel-btn {
+	background: #cccccc;
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #2D2C2B;
+    border: none;
+    cursor: pointer;
+
+}
+.cancel-btn2 {
+	background: #2D2C2B;
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+
+}
+.btn-cancel1{
+	 width: 45%;
+    display: flex;
+    justify-content: flex-start;
+}
+
+
+
+/*finished calculator*/
+
 
 
 /*background images*/
@@ -955,6 +1240,16 @@ h5{
 }
 
 /**/
+div[id^='anchor'] {
+    width: 40%;
+    margin-left: 50px;
+  }
+  
+  .demo-wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
 
 /*about apartments*/
 .apartment-section{
